--- a/hugo.yml
+++ b/hugo.yml
@@ -1,3 +1,3 @@
-baseURL: 'http://example.org/'
-languageCode: en-us
-title: My New Hugo Site
+baseURL: 'https://r5.07-base-de-donnees.gitlab.io/cours/'
+languageCode: fr-fr
+title: R5.07 Base de données
